test: Update .json files for logs