@@ -59,8 +59,7 @@ public class AddressBookParserTest {
         Person person = new PersonBuilder().build();
         EditPersonDescriptor descriptor = new EditPersonDescriptorBuilder(person).build();
         EditCommand command = (EditCommand) parser.parseCommand(EditCommand.COMMAND_WORD + " "
-                + INDEX_FIRST_PERSON.getOneBased() + " "
-                + PersonUtil.getEditPersonDescriptorDetails(descriptor));
+                + INDEX_FIRST_PERSON.getOneBased() + " " + PersonUtil.getEditPersonDescriptorDetails(descriptor));
         assertEquals(new EditCommand(INDEX_FIRST_PERSON, descriptor), command);
     }
 
@@ -73,12 +72,12 @@ public class AddressBookParserTest {
     @Test
     public void parseCommand_find_name() throws Exception {
         List<String> nameKeywords = Arrays.asList("foo", "bar", "baz");
-        List<String> addressKeywords = List.of();
+        List<String> addressKeywords = Arrays.asList(new String[] {});
         FindCommand command = (FindCommand) parser.parseCommand(
                 FindCommand.COMMAND_WORD + " " + CliSyntax.PREFIX_NAME + " "
                         + nameKeywords.stream().collect(Collectors.joining(" ")));
         assertEquals(new FindCommand(
-                        new NameAndAddressContainsKeywordPredicate(nameKeywords, addressKeywords)),
+                new NameAndAddressContainsKeywordPredicate(nameKeywords, addressKeywords)),
                 command
         );
     }
@@ -104,14 +103,12 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_unrecognisedInput_throwsParseException() {
-        assertThrows(ParseException.class, String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-                HelpCommand.MESSAGE_USAGE), ()
-                -> parser.parseCommand(""));
+        assertThrows(ParseException.class, String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE), ()
+            -> parser.parseCommand(""));
     }
 
     @Test
     public void parseCommand_unknownCommand_throwsParseException() {
-        assertThrows(ParseException.class, MESSAGE_UNKNOWN_COMMAND, () -> parser.parseCommand(
-                "unknownCommand"));
+        assertThrows(ParseException.class, MESSAGE_UNKNOWN_COMMAND, () -> parser.parseCommand("unknownCommand"));
     }
 }
